--- a/index.html
+++ b/index.html
@@ -109,12 +109,16 @@
                     </div>
 
                     <div id="loadingUMAP">
+                    <br>
                     <div class="loader" style = "margin:auto"></div>
+                    <br>
                     </div>
 
                     <div class="container">
                         
                         <div class="row justify-content-md-center" id="umapGraph"></div>
+
+                        <p> *Note that the blue data points represent Sig3- patients while the red data points represent Sig3+ patients</p>
                     </div>
                     <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
                     <input type="button" name="next" class="next action-button" value="Next" />
