fixed typo on webpage

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </fieldset>
                 <fieldset>
                     <h2 class="fs-title">Confidence Estimation</h2>
-                    <h3 class="fs-subtitle">Obtaining Patient Similarity with Training Dataset through UMAP Projections
+                    <h3 class="fs-subtitle">Obtaining Sample's Similarity with Training Dataset through UMAP Projections
                     </h3>
                     <div id="loadUMAP">
                         <br>
