fixed legends for UMAP projections

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         
                         <div class="row justify-content-md-center" id="umapGraph"></div>
 
-                        <p> *Note that the blue data points represent Sig3- patients while the red data points represent Sig3+ patients</p>
+                        <p> *Note that the blue and red data points are from the training dataset</p>
                     </div>
                     <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
                     <input type="button" name="next" class="next action-button" value="Next" />
