--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                         <a onclick="copyToClipboard()"
                             href="#">
-                            Copy Example URl to Clipboard</a>
+                            Copy Example URL to Clipboard</a>
 
 
 
