small UI changes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <div class="row justify-content-md-center">
                             <select class="form-select form-select-lg mb-3" aria-label="Default select example"
                                 id="modelSelection" onchange="generatePredictions()">
-                                <option selected>Open this select menu</option>
+                                <option selected>Select a Machine Learning Model</option>
                                 <option value="1">Neural Network</option>
                                 <option value="2">XGBoost</option>
                                 <option value="3">K-nearest-neighbors</option>
