minor UI changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <nav class="navbar navbar-dark bg-primary">
         <!-- Navbar content -->
-        <a class="navbar-brand" href="#">Signature 3 Analyzer</a>
+        <a class="navbar-brand" href="">Signature 3 Analyzer</a>
 
     </nav>
 
@@ -72,7 +72,7 @@
                 </ul>
                 <!-- fieldsets -->
                 <fieldset>
-                    <button onClick="window.location.reload();" class="reloadButton">
+                    <button onClick="window.location.reload();window.location.href='';" class="reloadButton" title="Reset">
                         <img src="./js/reset.svg" class="btn-icon">
                     </button>
                     <h2 class="fs-title">File Upload</h2>
@@ -113,7 +113,7 @@
                     <input type="button" name="next" class="next action-button" value="Next" />
                 </fieldset>
                 <fieldset>
-                    <button onClick="window.location.reload();" class="reloadButton">
+                    <button onClick="window.location.reload();" class="reloadButton" title="Reset">
                         <img src="./js/reset.svg" class="btn-icon">
                     </button>
                     <h2 class="fs-title">Confidence Estimation</h2>
@@ -142,7 +142,7 @@
                     <input type="button" name="next" class="next action-button" value="Next" />
                 </fieldset>
                 <fieldset>
-                    <button onClick="window.location.reload();" class="reloadButton">
+                    <button onClick="window.location.reload();" class="reloadButton" title="Reset">
                         <img src="./js/reset.svg" class="btn-icon">
                     </button>
                     <div class="container">
