fixed loading bug

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <nav class="navbar navbar-dark bg-primary">
         <!-- Navbar content -->
-        <a class="navbar-brand" href="">Signature 3 Analyzer</a>
+        <a class="navbar-brand" href="https://github.com/aaronge-2020/Sig3-Detection">Signature 3 Analyzer</a>
 
     </nav>
 
