--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </a>
                     <h2 class="fs-title">File Upload</h2>
                     <h3 class="fs-subtitle">Please upload your MSK-Impact File</h3>
-                    <div id='uploadProgress'></div>
+                    <div id='uploadProgress' style="display:none"></div>
                     <br>
                     <br>
                     <div class="container">
@@ -106,8 +106,9 @@
                                 <button type="button" class="btn btn-primary ml-auto mx-auto " id="processFile"
                                     onclick="loadFile()">Process</button>
 
-                                <svg style="display: none; position: absolute; top:10%; margin-left:10px;" class="checkmark" id="successGIF"
-                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                                <svg style="display: none; position: absolute; top:10%; margin-left:10px;"
+                                    class="checkmark" id="successGIF" xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 52 52">
                                     <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
                                     <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
                                 </svg>
@@ -166,18 +167,19 @@
                                 <option value="4">Logistic Regression</option>
                             </select>
                         </div>
+                        <div id="resultsSection" style="display: none;">
+                            <div id="" class="row justify-content-md-center">
+                                <h5 class="h5" id="predictedProb">Your Predicted Probability is: </h1>
+                            </div>
 
-                        <div id="results_text" class="row justify-content-md-center">
-                            <h5 class="h5" id="predictedProb">Your Predicted Probability is: </h1>
+                            <div class="row justify-content-md-center">
+
+                                <div id="results"></div>
+
+                            </div>
+
+                            <p id="actualOutput"></p>
                         </div>
-
-                        <div class="row justify-content-md-center">
-
-                            <div id="results"></div>
-
-                        </div>
-
-
                     </div>
                     <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
 
