minor UI updates

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                             </div>
 
-                            <p id="actualOutput"></p>
+                            <p>Output: <span id="actualOutput"></span></p>
 
                         </div>
                     </div>
