updated ML Model descriptions

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                             <select class="form-select form-select-lg mb-3" aria-label="Default select example"
                                 id="modelSelection" onchange="generatePredictions()">
                                 <option selected>Select a Machine Learning Model</option>
-                                <option value="1">Neural Network</option>
-                                <option value="2">XGBoost</option>
-                                <option value="3">K-nearest-neighbors</option>
+                                <option value="1">ANN (1 Hidden Layer with 228 Neurons)</option>
+                                <option value="2">Gradient Boosted Tree</option>
+                                <option value="3">Nearest-neighbors</option>
                                 <option value="4">Logistic Regression</option>
                             </select>
                         </div>
