--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 <option selected>Select a Machine Learning Model</option>
                                 <option value="1">ANN (1 Hidden Layer with 228 Neurons)</option>
                                 <option value="2">Gradient Boosted Tree</option>
-                                <option value="3">Nearest-neighbors</option>
+                                <option value="3">Nearest Neighbor</option>
                                 <option value="4">Logistic Regression</option>
                             </select>
                         </div>
